# XMUYearIdentificationTools

./: .gitignore  LICENSE  MANIFEST.in  README.md  activate_env.bat  activate_env.ps1  build_exe.bat  class.xlsx  classexample.xlsx  install_deps.bat  pyproject.toml  quick_build.bat  requirements.txt  run.bat  setup.py  zzmm.xlsx  启动工具.bat
config/: settings.json
data/templates/四年制学年鉴定表/: 22920216666666.docx
scripts/: cleanup_old_files.bat  cleanup_old_files.txt  test_system.py
src/: main.py
src/core/: __init__.py  evaluation_filler.py  file_renamer.py  pdf_converter.py
src/utils/: __init__.py  config_handler.py  dependency_manager.py
tools/: build.py  quality-check.py  setup-dev.bat
